# cuda_upup

./: CMakeLists.txt  README.md  mat_mul.cu  vector_add.cu
scripts/: build.sh
src/: CMakeLists.txt
src/matmuls/inc/: mat_mul.h
src/matmuls/src/: mat_mul.cu  mat_mul_block_and_no_local_mem.cu  mat_mul_block_and_no_local_mem.md  mat_mul_scalar.cpp  mat_mul_shared.cu  mat_mul_shared.md  mat_mul_shared_tile_1d.cu  mat_mul_shared_tile_1d.md  mat_mul_shared_tile_2d.cu  mat_mul_shared_tile_2d.md
src/matmuls/test/: mat_mul_test.cpp
src/reduce/inc/: reduce.h
src/reduce/src/: reduce_all_use_warp.cu  reduce_all_use_warp.md  reduce_bank_conflict_free.cu  reduce_bank_conflict_free.md  reduce_idle_thread_free.cu  reduce_idle_thread_free.md  reduce_interleaved_addressing.cu  reduce_interleaved_addressing.md  reduce_native.cu  reduce_native.md  reduce_scalar.cpp  reduce_unroll_last_warp.cu  reduce_unroll_last_warp.md
src/reduce/test/: reduce_test.cpp
src/simple_gtest/inc/: simple_gtest.h
src/utils/inc/: def.h  log.h  mat.h  thread_pool.h  timer.h
src/utils/src/: mat.cpp
src/utils/test/: cuda_info_query.cpp  thread_pool_test.cpp
test/: CMakeLists.txt  main.cpp
